# guild-wars-skill-cards

./: .gitignore  Cargo.toml  License.MIT.txt  Readme.md
.github/workflows/: rust.yml
assets/fonts/: Readme.md
assets/icons/: Readme.md
src/: card.rs  io.rs  main.rs  skill.rs  tabletop.rs
