[package]
name = "guild-wars-skill-cards"
version = "0.1.0"
authors = ["Stef B <regendo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.11.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
string-builder = "0.2.0"
raster = "0.2.0"
